--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
         <div class="card-body py-4">
             <h5 class="text-secondary text-uppercase small">পরবর্তী সময়</h5>
             <div id="status-text" class="fw-bold text-dark mt-2">অপেক্ষা করুন...</div>
+            
+            <!-- Main Countdown -->
             <div id="countdown" class="display-3 fw-bold text-success my-2">--:--:--</div>
+            
+            <!-- New Current Time Section -->
+            <div class="border-top pt-2 w-75 mx-auto">
+                <span class="text-muted small">বর্তমান সময়:</span>
+                <span id="current-clock" class="fw-bold text-primary ms-1" style="font-family: 'Courier New', monospace; font-size: 1.1rem;">
+                    --:--:--
+                </span>
+            </div>
+
         </div>
     </div>
 
